--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8404,3 +8404,11 @@ body {
   cursor: pointer;
 }
 
+/* User register page */
+
+.register-page img.captcha {
+  margin-bottom: 0px;
+  margin-top: 10px;
+  cursor: pointer;
+}
+
