--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -33,3 +33,70 @@
 @import "now-ui-kit/example-pages";
 @import "now-ui-kit/sections";
 @import "now-ui-kit/responsive";
+
+.FloatBtn {
+  position: fixed;
+  right: 80px;
+  bottom: 30px;
+  z-index: 99999;
+}
+
+.FloatBtn__btn {
+  font-size: 1.5em;
+  background: #333;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  color: white;
+  text-align: center;
+  border-radius: 50%;
+}
+
+.FloatBtn__btn--hasSudoed {
+  background: #00b067;
+}
+
+.FloatBtn__interface {
+  position: absolute;
+  right: 8px;
+  bottom: 40px;
+}
+
+.FloatBtn__interface--hasSudoed {
+  background: white;
+  padding: 20px;
+  bottom: 0;
+  border: 1px solid #cecece;
+  border-radius: 5px;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+  width: 400px;
+}
+
+.FloatBtn__infoLine {
+  margin-bottom: 5px;
+}
+
+.FloatBtn__infoLine > span {
+  font-weight: bold;
+}
+
+.FloatBtn__resetBtn {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  cursor: pointer;
+  border: 0;
+  margin: 5px 0 15px 0;
+  padding: 6px 10px;
+  background: #00b067;
+  color: white;
+  border-radius: 4px;
+  border-bottom: 2px solid #088b54;
+}
+
+.FloatBtn__resetBtn:hover {
+  background: #088b54;
+}
+
+.hidden {
+  display: none;
+}
