--- a/public/css/app.css
+++ b/public/css/app.css
@@ -79,7 +79,7 @@
 .bootstrap-switch .bootstrap-switch-handle-on.bootstrap-switch-brown,
 .bootstrap-switch .bootstrap-switch-handle-off.bootstrap-switch-brown {
   color: #fff;
-  background: #f96332;
+  background: #00b5ad;
 }
 
 .bootstrap-switch .bootstrap-switch-handle-on.bootstrap-switch-blue,
@@ -255,7 +255,7 @@
 }
 
 .bootstrap-switch.bootstrap-switch-on .bootstrap-switch-brown ~ .bootstrap-switch-default {
-  background-color: #f96332;
+  background-color: #00b5ad;
 }
 
 .bootstrap-switch.bootstrap-switch-on .bootstrap-switch-blue ~ .bootstrap-switch-default {
@@ -586,7 +586,7 @@
 
 .slider.slider-primary .noUi-connect,
 .slider.slider-primary.noUi-connect {
-  background-color: #f96332;
+  background-color: #00b5ad;
 }
 
 .slider.slider-primary.noUi-target {
@@ -594,7 +594,7 @@
 }
 
 .slider.slider-primary .noUi-handle {
-  background-color: #f96332;
+  background-color: #00b5ad;
 }
 
 .slider.slider-info .noUi-connect,
@@ -676,7 +676,7 @@
 }
 
 .datepicker.datepicker-primary {
-  background-color: #f96332;
+  background-color: #00b5ad;
 }
 
 .datepicker.datepicker-primary th,
@@ -686,11 +686,11 @@
 }
 
 .datepicker.datepicker-primary:after {
-  border-bottom-color: #f96332;
+  border-bottom-color: #00b5ad;
 }
 
 .datepicker.datepicker-primary.datepicker-orient-top:after {
-  border-top-color: #f96332;
+  border-top-color: #00b5ad;
 }
 
 .datepicker.datepicker-primary .dow {
@@ -721,7 +721,7 @@
 .datepicker.datepicker-primary table tr td.active.disabled div,
 .datepicker.datepicker-primary table tr td.active.disabled:hover div {
   background-color: #FFFFFF;
-  color: #f96332;
+  color: #00b5ad;
 }
 
 .datepicker.datepicker-primary table tr td.day:hover div,
@@ -792,7 +792,7 @@
 .datepicker.datepicker-primary table tr td span.active:hover[disabled],
 .datepicker.datepicker-primary table tr td span.active.disabled[disabled],
 .datepicker.datepicker-primary table tr td span.active.disabled:hover[disabled] {
-  color: #f96332;
+  color: #00b5ad;
 }
 
 .datepicker-inline {
@@ -901,7 +901,7 @@
 }
 
 .datepicker th {
-  color: #f96332;
+  color: #00b5ad;
 }
 
 .table-condensed > tbody > tr > td,
@@ -1111,7 +1111,7 @@
 .datepicker table tr td.active:hover div,
 .datepicker table tr td.active.disabled div,
 .datepicker table tr td.active.disabled:hover div {
-  background-color: #f96332;
+  background-color: #00b5ad;
   color: #FFFFFF;
   -webkit-box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.2);
@@ -1137,7 +1137,7 @@
 .datepicker table tr td.active:hover[disabled] div,
 .datepicker table tr td.active.disabled[disabled] div,
 .datepicker table tr td.active.disabled:hover[disabled] div {
-  background-color: #f96332;
+  background-color: #00b5ad;
 }
 
 .datepicker table tr td.active:active,
@@ -1180,7 +1180,7 @@
 .datepicker table tr td span.active.disabled,
 .datepicker table tr td span.active.disabled:hover {
   color: #fff;
-  background-color: #f96332;
+  background-color: #00b5ad;
 }
 
 .datepicker table tr td span.active:hover,
@@ -1203,7 +1203,7 @@
 .datepicker table tr td span.active:hover[disabled],
 .datepicker table tr td span.active.disabled[disabled],
 .datepicker table tr td span.active.disabled:hover[disabled] {
-  background-color: #f96332;
+  background-color: #00b5ad;
   -webkit-box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.2);
 }
@@ -1546,7 +1546,7 @@ fieldset[disabled]
 }
 
 .btn-primary {
-  background-color: #f96332;
+  background-color: #00b5ad;
   color: #FFFFFF;
 }
 
@@ -1561,7 +1561,7 @@ fieldset[disabled]
 .show > .btn-primary.dropdown-toggle,
 .show > .btn-primary.dropdown-toggle:focus,
 .show > .btn-primary.dropdown-toggle:hover {
-  background-color: #fa7a50;
+  background-color: #00d4ca;
   color: #FFFFFF;
   -webkit-box-shadow: none;
           box-shadow: none;
@@ -1596,34 +1596,34 @@ fieldset[disabled] .btn-primary:focus,
 fieldset[disabled] .btn-primary.focus,
 fieldset[disabled] .btn-primary:active,
 fieldset[disabled] .btn-primary.active {
-  background-color: #f96332;
-  border-color: #f96332;
+  background-color: #00b5ad;
+  border-color: #00b5ad;
 }
 
 .btn-primary.btn-simple {
-  color: #f96332;
-  border-color: #f96332;
+  color: #00b5ad;
+  border-color: #00b5ad;
 }
 
 .btn-primary.btn-simple:hover,
 .btn-primary.btn-simple:focus,
 .btn-primary.btn-simple:active {
   background-color: transparent;
-  color: #fa7a50;
-  border-color: #fa7a50;
+  color: #00d4ca;
+  border-color: #00d4ca;
   -webkit-box-shadow: none;
           box-shadow: none;
 }
 
 .btn-primary.btn-link {
-  color: #f96332;
+  color: #00b5ad;
 }
 
 .btn-primary.btn-link:hover,
 .btn-primary.btn-link:focus,
 .btn-primary.btn-link:active {
   background-color: transparent;
-  color: #fa7a50;
+  color: #00d4ca;
   text-decoration: none;
   -webkit-box-shadow: none;
           box-shadow: none;
@@ -1967,7 +1967,7 @@ fieldset[disabled] .btn-danger.active {
 
 .btn-neutral {
   background-color: #FFFFFF;
-  color: #f96332;
+  color: #00b5ad;
 }
 
 .btn-neutral:hover,
@@ -2080,14 +2080,14 @@ fieldset[disabled] .btn-neutral.active {
 .show > .btn-neutral.dropdown-toggle:focus,
 .show > .btn-neutral.dropdown-toggle:hover {
   background-color: #FFFFFF;
-  color: #fa7a50;
+  color: #00d4ca;
   -webkit-box-shadow: none;
           box-shadow: none;
 }
 
 .btn-neutral:hover,
 .btn-neutral:focus {
-  color: #fa7a50;
+  color: #00d4ca;
 }
 
 .btn-neutral:hover:not(.nav-link),
@@ -2293,7 +2293,7 @@ fieldset[disabled]
 }
 
 .form-control:focus {
-  border: 1px solid #f96332;
+  border: 1px solid #00b5ad;
   -webkit-box-shadow: none;
   box-shadow: none;
   outline: 0 !important;
@@ -2302,7 +2302,7 @@ fieldset[disabled]
 
 .form-control:focus + .input-group-addon,
 .form-control:focus ~ .input-group-addon {
-  border: 1px solid #f96332;
+  border: 1px solid #00b5ad;
   border-left: none;
   background-color: transparent;
 }
@@ -2530,7 +2530,7 @@ fieldset[disabled]
 
 .input-group-focus .input-group-addon {
   background-color: #FFFFFF;
-  border-color: #f96332;
+  border-color: #00b5ad;
 }
 
 .input-group-focus.form-group-no-border .input-group-addon {
@@ -2846,12 +2846,12 @@ textarea.form-control:active {
 }
 
 .progress-container.progress-primary .progress-bar {
-  background: #f96332;
+  background: #00b5ad;
 }
 
 .progress-container.progress-primary .progress-value,
 .progress-container.progress-primary .progress-badge {
-  color: #f96332;
+  color: #00b5ad;
 }
 
 .progress-container.progress-info .progress {
@@ -2934,8 +2934,8 @@ textarea.form-control:active {
 }
 
 .badge-primary {
-  border-color: #f96332;
-  color: #f96332;
+  border-color: #00b5ad;
+  color: #00b5ad;
 }
 
 .badge-info {
@@ -3038,8 +3038,8 @@ textarea.form-control:active {
 .pagination.pagination-primary .page-item.active > .page-link,
 .pagination.pagination-primary .page-item.active > .page-link:focus,
 .pagination.pagination-primary .page-item.active > .page-link:hover {
-  background-color: #f96332;
-  border-color: #f96332;
+  background-color: #00b5ad;
+  border-color: #00b5ad;
 }
 
 .pagination.pagination-warning .page-item.active > .page-link,
@@ -3071,7 +3071,7 @@ textarea.form-control:active {
 .pagination.pagination-neutral .page-item.active > .page-link:hover {
   background-color: #FFFFFF;
   border-color: #FFFFFF;
-  color: #f96332;
+  color: #00b5ad;
 }
 
 button,
@@ -3096,12 +3096,12 @@ small {
 }
 
 a {
-  color: #f96332;
+  color: #00b5ad;
 }
 
 a:hover,
 a:focus {
-  color: #f96332;
+  color: #00b5ad;
 }
 
 h1,
@@ -3200,7 +3200,7 @@ p.description {
 }
 
 .text-primary {
-  color: #f96332 !important;
+  color: #00b5ad !important;
 }
 
 .text-info {
@@ -3238,12 +3238,12 @@ p.description {
 }
 
 .blockquote.blockquote-primary {
-  border-color: #f96332;
-  color: #f96332;
+  border-color: #00b5ad;
+  color: #00b5ad;
 }
 
 .blockquote.blockquote-primary small {
-  color: #f96332;
+  color: #00b5ad;
 }
 
 .blockquote.blockquote-danger {
@@ -3332,7 +3332,7 @@ body {
 }
 
 .separator.separator-primary {
-  background-color: #f96332;
+  background-color: #00b5ad;
 }
 
 .nav-pills .nav-item .nav-link {
@@ -3381,13 +3381,13 @@ body {
 .nav-pills.nav-pills-neutral .nav-item .nav-link.active:focus,
 .nav-pills.nav-pills-neutral .nav-item .nav-link.active:hover {
   background-color: #FFFFFF;
-  color: #f96332;
+  color: #00b5ad;
 }
 
 .nav-pills.nav-pills-primary .nav-item .nav-link.active,
 .nav-pills.nav-pills-primary .nav-item .nav-link.active:focus,
 .nav-pills.nav-pills-primary .nav-item .nav-link.active:hover {
-  background-color: #f96332;
+  background-color: #00b5ad;
 }
 
 .nav-pills.nav-pills-info .nav-item .nav-link.active,
@@ -3516,8 +3516,8 @@ body {
 }
 
 .nav-tabs.nav-tabs-primary > .nav-item > .nav-link.active {
-  border-color: #f96332;
-  color: #f96332;
+  border-color: #00b5ad;
+  color: #00b5ad;
 }
 
 .nav-tabs.nav-tabs-info > .nav-item > .nav-link.active {
@@ -3704,7 +3704,7 @@ body {
 }
 
 .bg-primary {
-  background-color: #f96332 !important;
+  background-color: #00b5ad !important;
 }
 
 .bg-info {
@@ -3783,11 +3783,11 @@ body {
 }
 
 .dropdown-menu.dropdown-primary {
-  background-color: #f95823;
+  background-color: #00a69e;
 }
 
 .dropdown-menu.dropdown-primary:before {
-  color: #f95823;
+  color: #00a69e;
 }
 
 .dropdown-menu.dropdown-primary .dropdown-header:not([href]):not([tabindex]) {
@@ -4049,7 +4049,7 @@ img {
 }
 
 .popover.popover-primary {
-  background-color: #f96332;
+  background-color: #00b5ad;
 }
 
 .popover.popover-primary .popover-body {
@@ -4057,19 +4057,19 @@ img {
 }
 
 .popover.popover-primary.bs-popover-right .arrow:after {
-  border-right-color: #f96332;
+  border-right-color: #00b5ad;
 }
 
 .popover.popover-primary.bs-popover-top .arrow:after {
-  border-top-color: #f96332;
+  border-top-color: #00b5ad;
 }
 
 .popover.popover-primary.bs-popover-bottom .arrow:after {
-  border-bottom-color: #f96332;
+  border-bottom-color: #00b5ad;
 }
 
 .popover.popover-primary.bs-popover-left .arrow:after {
-  border-left-color: #f96332;
+  border-left-color: #00b5ad;
 }
 
 .popover.popover-primary .popover-header {
@@ -4822,7 +4822,7 @@ Created using IcoMoon - icomoon.io
 }
 
 .modal.modal-mini .modal-profile i {
-  color: #f96332;
+  color: #00b5ad;
   font-size: 21px;
 }
 
@@ -4831,7 +4831,7 @@ Created using IcoMoon - icomoon.io
 }
 
 .modal.modal-mini .modal-profile.modal-profile-primary {
-  background-color: #f96332;
+  background-color: #00b5ad;
 }
 
 .modal.modal-mini .modal-profile.modal-profile-danger {
@@ -4868,7 +4868,7 @@ Created using IcoMoon - icomoon.io
 }
 
 .modal.modal-primary .modal-content {
-  background-color: #f96332;
+  background-color: #00b5ad;
   color: #FFFFFF;
 }
 
@@ -4959,7 +4959,7 @@ Created using IcoMoon - icomoon.io
 }
 
 .card[data-background-color="orange"] {
-  background-color: #f96332;
+  background-color: #00b5ad;
 }
 
 .card[data-background-color="red"] {
@@ -5254,8 +5254,8 @@ Created using IcoMoon - icomoon.io
   /* For Safari 5.1 to 6.0 */
   /* For Opera 11.1 to 12.0 */
   /* For Firefox 3.6 to 15 */
-  background: -webkit-gradient(linear, left bottom, left top, from(rgba(227, 227, 227, 0.26)), to(rgba(249, 99, 50, 0.95)));
-  background: linear-gradient(0deg, rgba(227, 227, 227, 0.26), rgba(249, 99, 50, 0.95));
+  background: -webkit-gradient(linear, left bottom, left top, from(rgba(227, 227, 227, 0.26)), to(rgba(0, 181, 173, 0.95)));
+  background: linear-gradient(0deg, rgba(227, 227, 227, 0.26), rgba(0, 181, 173, 0.95));
   /* Standard syntax */
 }
 
@@ -5954,13 +5954,13 @@ Created using IcoMoon - icomoon.io
   }
 
   .sidebar-collapse .navbar-collapse:before {
-    background: #f96332;
+    background: #00b5ad;
     /* For browsers that do not support gradients */
     /* For Safari 5.1 to 6.0 */
     /* For Opera 11.1 to 12.0 */
     /* For Firefox 3.6 to 15 */
-    background: -webkit-gradient(linear, left top, left bottom, from(#f96332), color-stop(80%, #000));
-    background: linear-gradient(#f96332 0%, #000 80%);
+    background: -webkit-gradient(linear, left top, left bottom, from(#00b5ad), color-stop(80%, #000));
+    background: linear-gradient(#00b5ad 0%, #000 80%);
     /* Standard syntax (must be last) */
     opacity: 0.76;
     filter: alpha(opacity=76);
@@ -6813,13 +6813,13 @@ Created using IcoMoon - icomoon.io
   }
 
   .burger-menu .navbar-collapse:before {
-    background: #f96332;
+    background: #00b5ad;
     /* For browsers that do not support gradients */
     /* For Safari 5.1 to 6.0 */
     /* For Opera 11.1 to 12.0 */
     /* For Firefox 3.6 to 15 */
-    background: -webkit-gradient(linear, left top, left bottom, from(#f96332), color-stop(80%, #000));
-    background: linear-gradient(#f96332 0%, #000 80%);
+    background: -webkit-gradient(linear, left top, left bottom, from(#00b5ad), color-stop(80%, #000));
+    background: linear-gradient(#00b5ad 0%, #000 80%);
     /* Standard syntax (must be last) */
     opacity: 0.76;
     filter: alpha(opacity=76);
